cbits/Bullet.h

void* btGLDebugDrawer_new(); //constructor: btGLDebugDrawer  ( ::btGLDebugDrawer::* )(  ) 
void btGLDebugDrawer_free(void *c);
 
void btGLDebugDrawer_draw3dText(void *c,float* p0,char const * p1); //method: draw3dText void ( ::btGLDebugDrawer::* )( ::btVector3 const &,char const * ) 
void btGLDebugDrawer_drawTriangle(void *c,float* p0,float* p1,float* p2,float* p3,float p4); //method: drawTriangle void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const &,::btScalar ) 
void btGLDebugDrawer_drawBox(void *c,float* p0,float* p1,float* p2,float p3); //method: drawBox void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btScalar ) 
void btGLDebugDrawer_drawContactPoint(void *c,float* p0,float* p1,float p2,int p3,float* p4); //method: drawContactPoint void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btVector3 const &,::btScalar,int,::btVector3 const & ) 
void btGLDebugDrawer_drawLine(void *c,float* p0,float* p1,float* p2,float* p3); //method: drawLine void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void btGLDebugDrawer_drawLine0(void *c,float* p0,float* p1,float* p2,float* p3); //method: drawLine void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void btGLDebugDrawer_drawLine1(void *c,float* p0,float* p1,float* p2); //method: drawLine void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const & ) 
void btGLDebugDrawer_reportErrorWarning(void *c,char const * p0); //method: reportErrorWarning void ( ::btGLDebugDrawer::* )( char const * ) 
int btGLDebugDrawer_getDebugMode(void *c); //method: getDebugMode int ( ::btGLDebugDrawer::* )(  ) const
void btGLDebugDrawer_setDebugMode(void *c,int p0); //method: setDebugMode void ( ::btGLDebugDrawer::* )( int ) 
void btGLDebugDrawer_drawSphere(void *c,float* p0,float p1,float* p2); //method: drawSphere void ( ::btGLDebugDrawer::* )( ::btVector3 const &,::btScalar,::btVector3 const & ) 